<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WirelessNotesandQuiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="score">Score :0</string>
							<string name="question">Question :1/x</string>
							<string name="time">00:30</string>
							<string name="qu">Here is a sample question</string>
						
									<string name="option1">option1</string>
									<string name="option2">option2</string>
									<string name="option3">option3</string>
									<string name="confirm">Confirm</string>
									<string name="s">High score</string>
									<string name="a">Cooper Black</string>
									
</resources>