<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9A9A9"
    android:orientation="vertical"
 >
    
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/score"
    android:layout_marginTop="20dp"
    android:id="@+id/text_view_score"
    android:textSize="20dp"
    android:freezesText="true"
        
        />
    
    <LinearLayout 
        
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
         android:orientation="horizontal"
        >
        
            <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question"
    android:layout_marginTop="20dp"
    android:id="@+id/text_view_question_count"
    android:textSize="20dp"
     android:freezesText="true"
        
        />
            
             <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/time"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="60dp"
    android:id="@+id/text_view_countdown"
    android:textSize="40dp"
         android:freezesText="true"
        /> 
            
        
        
        </LinearLayout>

      <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/qu"
     android:layout_marginLeft="15dp"
    android:layout_marginTop="20dp"
    android:textAlignment="center"
    android:id="@+id/text_view_question"
    android:textSize="20dp"
         android:freezesText="true"
        /> 
        
      
      <RadioGroup 
          
     android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radio_group"
   
         >
             <RadioButton 
                 
   android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/option1"
    android:text="@string/option1"
    android:layout_marginTop="50dp"
     android:freezesText="true"
                 
                 />
             <RadioButton 
                 
   android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/option2"
    android:text="@string/option2"
     android:freezesText="true"
                 
                 />
             <RadioButton 
                 
   android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/option3"
    android:text="@string/option3"
     android:freezesText="true"
                 
                 />
          
      </RadioGroup>
    

      <Button 
          
                           
   android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/confirm"
    android:text="@string/confirm"
     android:freezesText="true"
    
          
          
          />
      
      
</LinearLayout>